--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
 	<div>NOTE: discounts of 10% are given to orders over $250</div>
 
 	<script>
+		/* Mohamed Abuohagar - A01409210 - Assignment1
+		    /*
+                Use the following steps to complete your assignment.
+                @NOTE: Do not include these comments in your final submission. 
+                Your final submission MUST include your own comments.
+                1. Retrieve the quantities & price for each line
+                2. Calculate the total for each line
+                3. Display each line total to the screen (Be sure to display the result to two decimal places)
+                4. Keep a running total for all lines
+                5. Display the sub-total to screen
+                6. Calculate if the discount should be applied, if so display the discount value to the screen
+                7. Calculate the tax on the sub-total
+                8. Display the calculated to the screen to two decimal places
+            */
 		document.getElementById("calculate").addEventListener("click", calculate)
 	    function calculate() {
 			let subTotal = 0;
@@ -124,24 +138,6 @@
 			/* calc final total */
 			const total = taxableAmount + tax;
 			document.getElementById("Total").textContent = `$${total.toFixed(2)}`;
-
-            /*
-
-                Use the following steps to complete your assignment.
-
-                @NOTE: Do not include these comments in your final submission. 
-                       Your final submission MUST include your own comments.
-
-                1. Retrieve the quantities & price for each line
-                2. Calculate the total for each line
-                3. Display each line total to the screen (Be sure to display the result to two decimal places)
-                4. Keep a running total for all lines
-                5. Display the sub-total to screen
-                6. Calculate if the discount should be applied, if so display the discount value to the screen
-                7. Calculate the tax on the sub-total
-                8. Display the calculated to the screen to two decimal places
-                
-            */
 	    }
 	
 	
